# Siili_Task

./: CMakeLists.txt  Histogram.qml  README.md  SpeedGauge.qml  gaugecontrol.cpp  gaugecontrol.h  main.cpp  main.qml
